--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -7,7 +7,9 @@ requires-python = ">=3.13"
 dependencies = [
     "kagglehub>=1.0.0",
     "numpy>=2.4.2",
+    "pandas>=3.0.1",
     "scikit-learn>=1.8.0",
+    "sentence-transformers>=5.2.3",
     "tensorflow>=2.20.0",
     "torch>=2.10.0",
     "torchaudio>=2.10.0",
